# ai-workforce

./: .env.example  .gitignore  Dockerfile  FULL_SESSION.md  README.md  SESSION.md  docker-compose.yml  langgraph.json  litellm_config.yaml  pyproject.toml
src/: agents.py  callbacks.py  graph.py  server.py  state.py  store.py  tools.py  ui.html  worktree.py
